bonus/conf/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # --- 追加: cert-manager への指示 ---
    cert-manager.io/cluster-issuer: "my-ca-issuer"
    # -------------------------------
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  # --- 追加: TLS 設定 ---
  tls:
  - hosts:
    - argocd.k8s.icchon.jp
    secretName: argocd-server-tls # cert-manager がこの名前で本物を作ってくれる
  # --------------------
  rules:
  - host: argocd.k8s.icchon.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
